Update src/main/java/bio/terra/app/configuration/ResourceBufferServiceConfiguration.java
Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>